// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useTweetstormHandler BYPASS 1`] = `
Object {
  "data": Object {
    "message": "BYPASS",
    "statusIds": Array [
      "BYPASS",
    ],
    "userId": undefined,
  },
  "error": undefined,
  "meta": Object {
    "env": "test",
    "name": "tweries-api",
    "originalUrl": "/api/v1/mock",
    "timestamp": Any<Number>,
    "version": Any<String>,
  },
}
`;

exports[`useTweetstormHandler to match snapshot w/ error 1`] = `
Object {
  "data": Object {
    "items": Array [
      Object {
        "tweet": "Hello #Tweries",
      },
    ],
    "statusIds": Array [
      "mock_id",
    ],
    "userId": "twitter|1183836409850814464",
  },
  "error": [Error: Oh Noes!],
  "meta": Object {
    "env": "test",
    "name": "tweries-api",
    "originalUrl": "/api/v1/mock",
    "timestamp": Any<Number>,
    "version": Any<String>,
  },
}
`;

exports[`useTweetstormHandler to match snapshot w/ result 1`] = `
Object {
  "data": Object {
    "items": Array [
      Object {
        "tweet": "Hello #Tweries",
      },
    ],
    "result": Object {
      "n": 1,
      "ok": 1,
    },
    "statusIds": Array [
      "mock_id",
    ],
    "userId": "twitter|1183836409850814464",
  },
  "error": undefined,
  "meta": Object {
    "env": "test",
    "name": "tweries-api",
    "originalUrl": "/api/v1/mock",
    "timestamp": Any<Number>,
    "version": Any<String>,
  },
}
`;
